Bug 157189 - Bookmark name is not updated in Bookmarks menu after renaming
Summary: Bookmark name is not updated in Bookmarks menu after renaming
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.6
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-05 06:31 UTC by Vladimir Kuznetsov
Modified: 2008-02-05 18:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladimir Kuznetsov 2008-02-05 06:31:57 UTC
Version:           0.6 (using 4.00.00 (KDE 4.0.0), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.22-14-generic

After renaming the bookmark in Bookmarks dock its name is not updated in Bookmarks menu until you reload the document or create one more bookmark.
Comment 1 Tobias Koenig 2008-02-05 18:36:36 UTC
SVN commit 771286 by tokoe:

Update the bookmark menu whenever bookmarks have been renamed
in the sidebar

BUG: 157189


 M  +1 -0      core/bookmarkmanager.cpp  
 M  +5 -0      core/bookmarkmanager.h  
 M  +7 -0      part.cpp  
 M  +1 -0      part.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=771286