Update the bookmark menu whenever bookmarks have been renamed in the sidebar

BUG: 157189

svn path=/trunk/KDE/kdegraphics/okular/; revision=771286